Introduce domain models for Git and Jira, including RepoId, JiraTenant, JiraBoardId, JiraAccountId, and JiraProjectKey